--- a/WSGestionProductos/packages.config
+++ b/WSGestionProductos/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Azure.Core" version="1.50.0" targetFramework="net48" />
   <package id="Azure.Identity" version="1.17.1" targetFramework="net48" />
-  <package id="Dapper" version="2.1.66" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.3" targetFramework="net48" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient" version="6.1.4" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient.SNI" version="6.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net48" />
@@ -11,7 +11,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="10.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="10.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="10.0.3" targetFramework="net48" />
   <package id="Microsoft.Identity.Client" version="4.80.0" targetFramework="net48" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.78.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Abstractions" version="8.14.0" targetFramework="net48" />
