Elimina proyectos obsoletos y actualiza dependencias
Se elimina completamente el proyecto "5_CPresentacion" y "ProyectoPrueba" de la solución, incluyendo archivos fuente, recursos y configuración. Se actualiza el GUID y las referencias en "Presentacion", añadiendo dependencias directas a "Negocio" y "Transversal". Se corrigen namespaces y cierres de clases en los formularios. Se eliminan referencias a paquetes NuGet y se ajusta la configuración de la solución para reflejar la nueva estructura. Estos cambios consolidan la funcionalidad en "Presentacion" y mejoran la integración entre proyectos.

--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC158E11-5E16-4C0F-B147-E50E10422E76}</ProjectGuid>
+    <ProjectGuid>{EE559107-09C0-4358-81FF-5ACC4CD3512C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Presentacion</RootNamespace>
     <AssemblyName>Presentacion</AssemblyName>
@@ -75,6 +75,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Negocio\Negocio.csproj">
+      <Project>{8940c10c-8c77-4418-8756-a1daeaf2fa01}</Project>
+      <Name>Negocio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Transversal\Transversal.csproj">
+      <Project>{e23022d7-655d-4ee0-a3d7-e296b2e3d843}</Project>
+      <Name>Transversal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
