--- a/ReferenciaServicios/ReferenciaServicios.csproj
+++ b/ReferenciaServicios/ReferenciaServicios.csproj
@@ -71,7 +71,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Content Include="Web References\WRGestionProductos\ProductResponseDto.datasource">
+    <Content Include="Web References\WRGestionProductos\ProductosRPT.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
     <None Include="Web References\WRGestionProductos\Reference.map">
