Migración de CRUD de productos a servicio web
Se reemplaza la lógica local de gestión de productos por llamadas directas al servicio web WSGestionProductos. Se eliminan las clases DTO locales y se utilizan los tipos generados por el servicio. Los métodos CrearProducto y ActualizarProducto ahora devuelven objetos completos en vez de enteros. Se actualizan los nombres de propiedades en la interfaz y el DataGridView para alinearse con el servicio. Se agregan archivos .datasource y se modifica el WSDL para reflejar los nuevos contratos. Se añade la referencia a System.Web.Services y se mejoran los mensajes de error en la interfaz.

--- a/ReferenciaServicios/ReferenciaServicios.csproj
+++ b/ReferenciaServicios/ReferenciaServicios.csproj
@@ -74,6 +74,12 @@
     <Content Include="Web References\WRGestionProductos\ProductosListRPT.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
+    <Content Include="Web References\WRGestionProductos\ProductoActualizarRPT.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\WRGestionProductos\ProductoCrearRPT.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
     <None Include="Web References\WRGestionProductos\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
