--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -170,10 +170,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conexion\DbConexion.cs" />
+    <Compile Include="Conexion\ConexionCD.cs" />
     <Compile Include="Entidades\ProductoCD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositorios\ProductoRepositorio.cs" />
+    <Compile Include="Repositorios\ProductoRepositorioCD.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
