Refactor: renombrado de clases y variables de productos
Se renombraron clases y variables en la capa de datos y negocio para mejorar la consistencia y claridad. Se eliminó GestorProducto y se creó ProductoGestorCN con nueva nomenclatura. Los DTOs de productos también fueron renombrados. Se actualizaron métodos y referencias en Negocio.csproj y el servicio web para reflejar estos cambios, mejorando la legibilidad y mantenibilidad sin alterar la funcionalidad.

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -85,8 +85,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Esquemas\ProductDtos.cs" />
-    <Compile Include="Gestores\GestorProducto.cs" />
+    <Compile Include="Esquemas\ProductosCN.cs" />
+    <Compile Include="Gestores\ProductoGestorCN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
